<resources>
    <string name="app_name">CainCamera</string>

    <string name="btn_view_photo">查看照片</string>
    <string name="btn_take">拍摄</string>
    <string name="btn_switch_camera">切换镜头</string>
    <string name="btn_setting">设置</string>
    <string name="btn_back">返回</string>
    <string name="btn_more">更多</string>

    <!--顶部设置文字-->
    <string name="tv_flash">闪光灯</string>
    <string-array name="tv_face_mode">
        <item>单脸模式</item>
        <item>多脸模式</item>
    </string-array>
    <string-array name="tv_beautify">
        <item>美颜开启</item>
        <item>美颜关闭</item>
    </string-array>
    <string name="tv_time_lapse">延时拍摄</string>
    <string name="tv_auto_save">自动保存</string>
    <string name="tv_touch_take">触屏拍照</string>


    <!--底部文字-->
    <string name="tv_gif">表情包</string>
    <string name="tv_picture">拍照</string>
    <string name="tv_sticker">萌装照</string>
    <string name="tv_video">视频</string>

    <!--编辑图片-->
    <string name="brightness">亮度</string>
    <string name="contrast">对比度</string>
    <string name="exposure">曝光</string>
    <string name="hue">色调</string>
    <string name="saturation">饱和度</string>
    <string name="sharpness">锐度</string>
    <!--编辑视频-->
    <string name="cancel">取消</string>
    <string name="finish">完成</string>

    <string-array name="trackig_mode_array">
        <item>Normal</item>
        <item>Robust</item>
        <item>Fast</item>
    </string-array>

    <string-array name="gallery_indicator">
        <item>表情包</item>
        <item>拍照</item>
        <item>视频</item>
    </string-array>

    <!-- 首页按钮 -->
    <string name="btn_camera">滤镜相机</string>
    <string name="btn_video_record">使用FFmpeg录制视频</string>
    <string name="btn_edit">编辑图片/视频</string>

    <!--合并视频提示-->
    <string name="combining">正在合并视频...</string>

    <!-- 调试描述 -->
    <string name="test_description">CainCamera目前采用单一HandlerThread 同时处理Camera相机流和渲染逻辑，请参考CameraActivity
        一条HandlerThread控制Camera，一条HandlerThread控制渲染的方式在相当大一部分部分MTK的CPU上onPreviewFrame回调时间过长。
        详情请参考CameraTesActivity里面的得到的测试结果</string>

    <string name="test_allright">项目地址：https://github.com/CainKernel/CainCamera </string>
</resources>
